# desktop-file-gen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/desktop_file_gen/: app.py  desktop.py  lib.py
